# SpecLance

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
crates/prolance-cli/: Cargo.toml
crates/prolance-cli/src/: main.rs
crates/prolance-core/: Cargo.toml
crates/prolance-core/src/: lib.rs  schema.rs  store.rs  types.rs
crates/prolance-core/tests/: query_window.rs
crates/prolance-ms/: Cargo.toml
crates/prolance-ms/examples/: smoke_read.rs
crates/prolance-ms/src/: bruker.rs  error.rs  lib.rs  mzml.rs  thermo.rs  vendor.rs  waters.rs
crates/prolance-ms/src/mzml/: reader.rs  writer.rs
crates/prolance-ms/tests/: bruker_adapter.rs  mzml_roundtrip.rs  thermo_adapter.rs  waters_adapter.rs
crates/prolance-py/: Cargo.toml  README.md  pyproject.toml
crates/prolance-py/python/prolance/: __init__.py
crates/prolance-py/src/: lib.rs
crates/prolance-py/tests/: test_store.py
crates/speclance-cli/: Cargo.toml
crates/speclance-cli/src/: main.rs
crates/speclance-cli/tests/: store_roundtrip.rs
crates/speclance-core/: Cargo.toml
crates/speclance-core/src/: error.rs  from_batch.rs  lib.rs  schema.rs  store.rs
crates/speclance-core/tests/: query_window.rs
crates/speclance-ms/: Cargo.toml
crates/speclance-ms/examples/: smoke_read.rs
crates/speclance-ms/src/: error.rs  lib.rs  mzml.rs  vendor.rs
crates/speclance-ms/src/mzml/: reader.rs  writer.rs
crates/speclance-ms/tests/: bruker_adapter.rs  mzml_roundtrip.rs  thermo_adapter.rs  waters_adapter.rs
crates/speclance-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/speclance-py/python/speclance/: __init__.py
crates/speclance-py/src/: lib.rs
crates/speclance-py/tests/: test_store.py
docs/: README.md  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json  wrangler.jsonc
docs/docs/: intro.md
docs/docs/guide/: python-api.md
