[workspace]
members = [
    "crates/prolance-core",
    "crates/prolance-ms",
    "crates/prolance-cli",
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.75"
license       = "Apache-2.0"
authors       = ["Nathan Riley <git@nathanriley.com>"]
repository    = "https://github.com/Sigilweaver/ProLance"
homepage      = "https://github.com/Sigilweaver/ProLance"

[workspace.dependencies]
# Storage / Arrow
lancedb       = "=0.27.2"
arrow-array   = "=57.3.0"
arrow-schema  = "=57.3.0"
arrow-select  = "=57.3.0"

# Async + utilities
futures       = "0.3"
tokio         = { version = "1", features = ["full"] }
rayon         = "1"
indicatif     = "0"
anyhow        = "1"
thiserror    = "2"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
chrono        = { version = "0.4", default-features = false, features = ["clock"] }
clap          = { version = "4", features = ["derive"] }
sha2          = "0.10"
sha1          = "0.10"
base64        = "0.22"
quick-xml     = { version = "0.36", features = ["serialize"] }
flate2        = "1"
memchr        = "2"

# Vendor readers (path deps - sibling projects)
opentfraw     = { path = "../OpenTFRaw" }
opentimstdf   = { path = "../OpenTDF" }
openwraw      = { path = "../OpenWRaw/crates/openwraw" }

# Internal crates
prolance-core = { path = "crates/prolance-core" }
prolance-ms   = { path = "crates/prolance-ms" }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
