[workspace]
members = [
    "crates/speclance-core",
    "crates/speclance-ms",
    "crates/speclance-cli",
    "crates/speclance-py",
]
resolver = "2"

[workspace.package]
version = "0.2.0-alpha"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Nathan Riley <git@nathanriley.com>"]
repository = "https://github.com/Sigilweaver/SpecLance"
homepage = "https://sigilweaver.app/speclance/"
documentation = "https://sigilweaver.app/speclance/docs/"
keywords = ["mass-spectrometry", "lance", "arrow", "psi-ms", "proteomics"]
categories = ["science", "database", "encoding"]

[workspace.dependencies]
# Storage / Arrow
lancedb = "=0.27.2"
arrow-array = "=57.3.0"
arrow-schema = "=57.3.0"
arrow-select = "=57.3.0"

# Async + utilities
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rayon = "1"
indicatif = "0"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
sha1 = "0.11"
base64 = "0.22"
quick-xml = { version = "0.41", features = ["serialize"] }
flate2 = "1"
memchr = "2"

# Vendor readers. SpecLance no longer talks to these directly; everything
# goes through `openmassspec-io`. They are kept as workspace deps so that
# openmassspec-io's path resolution stays valid in transitive lookups.
# Pinned to crates.io releases (no `path =`) so `cargo publish` and CI
# checkouts work without a sibling-repo workspace.
opentfraw = "1.1.0"
opentimstdf = "1.1.0"
openwraw = "1.1.0"
openmassspec-io = "1.0.0"

# Internal crates
speclance-core = { version = "=0.2.0-alpha", path = "crates/speclance-core" }
speclance-ms = { version = "=0.2.0-alpha", path = "crates/speclance-ms" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
