[package]
name = "prolance-cli"
description = "Command-line interface for ProLance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "prolance"
path = "src/main.rs"

[features]
default = []
vendors = ["prolance-ms/vendors"]
thermo = ["vendors"]
bruker = ["vendors"]
waters = ["vendors"]
all-vendors = ["vendors"]

[dependencies]
prolance-core = { workspace = true }
prolance-ms = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
lancedb = { workspace = true }

[dev-dependencies]
tempfile = "3"
