[package]
name        = "prolance-ms"
description = "Ingest adapters and mzML reader/writer for ProLance"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[features]
default = []
# Vendor ingest goes through openproteo-io with all three vendors enabled.
# `thermo`, `bruker`, `waters` are kept as aliases so callers can keep their
# existing feature flags; they all turn on the same code path.
vendors     = ["dep:openproteo-io"]
thermo      = ["vendors"]
bruker      = ["vendors"]
waters      = ["vendors"]
all-vendors = ["vendors"]

[dependencies]
prolance-core = { workspace = true }
arrow-array   = { workspace = true }
arrow-schema  = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
quick-xml     = { workspace = true }
base64        = { workspace = true }
flate2        = { workspace = true }
memchr        = { workspace = true }
chrono        = { workspace = true }
sha2          = { workspace = true }
sha1          = { workspace = true }

openproteo-io = { workspace = true, optional = true, features = ["all"] }

[dev-dependencies]
tokio   = { workspace = true }
tempfile = "3"
