[package]
name        = "prolance-py"
description = "Python bindings for ProLance (Lance-backed MS data store)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[lints]
workspace = true

[lib]
name = "_prolance"
crate-type = ["cdylib"]

[dependencies]
prolance-core = { workspace = true }
prolance-ms   = { workspace = true }
tokio         = { workspace = true }
futures       = { workspace = true }
lancedb       = { workspace = true }
anyhow        = { workspace = true }
pyo3          = { version = "0.22", features = ["extension-module"] }
