[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "prolance"
version = "0.1.0"
description = "Python bindings for ProLance (Lance-backed MS data store)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Nathan Riley", email = "git@nathanriley.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "prolance._prolance"
manifest-path = "Cargo.toml"
python-source = "python"
